@@ -1,28 +1,0 @@
-                    Payroll_Report : E
-                            ^
-                            |
-                    Payroll_Record : A
-                        ^       |
-                .-------'       '----------.
-                |                          v
-        Deduction_Payment : E           Employee : AR                  Account : E
-                |                       ^      ^                            ^
-                |           .-----------'      '------------.               |
-                |           |                               |               |
-                |       Salary : E                      Person : E          |
-                |           ^                                               |
-                |           |                                               |
-                '-----> Deduction : E --------------------------------------' 
-
-Aggregates:         Entities:           ValueObjects:
-Employee            Salary              MonetaryValue
-Payroll_Record      Deduction           Date
-                    Account
-                    Payroll_Report
-                    Person
-
-PS:
-    Entity has a unique identity
-    ValueObjects has no identity, uniqueness can be determined by its atomic properties
-    Aggregates are Entities
-    Aggregate Root serves as entry-point to access other member Entity
