@@ -1,0 +1,7 @@
+using hr.core.helper;
+
+namespace console.com {
+    public class TestCommandA : Command {
+        
+    }
+}
