@@ -9,6 +9,8 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "hr.infrastracture", "hr.inf
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "hr.xunit", "hr.xunit\hr.xunit.csproj", "{AE179E5A-FF29-4A61-B7EA-3C957E0AA73D}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "console", "console\console.csproj", "{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -58,5 +60,17 @@ Global
 		{AE179E5A-FF29-4A61-B7EA-3C957E0AA73D}.Release|x64.Build.0 = Release|Any CPU
 		{AE179E5A-FF29-4A61-B7EA-3C957E0AA73D}.Release|x86.ActiveCfg = Release|Any CPU
 		{AE179E5A-FF29-4A61-B7EA-3C957E0AA73D}.Release|x86.Build.0 = Release|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Debug|x64.ActiveCfg = Debug|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Debug|x64.Build.0 = Debug|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Debug|x86.Build.0 = Debug|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Release|Any CPU.Build.0 = Release|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Release|x64.ActiveCfg = Release|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Release|x64.Build.0 = Release|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Release|x86.ActiveCfg = Release|Any CPU
+		{2773DCFE-892B-41A6-BB35-CCD5BD7EDABC}.Release|x86.Build.0 = Release|Any CPU
 	EndGlobalSection
 EndGlobal
