@@ -1,3 +1,8 @@
+1-1-20
+Rewrite domain
+Initial Commit
+
+-----------------------------------------------
 12-16-19
 HR.Domain.Models:
     + abstract class ValueObject
